; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/gl_scenes/extr_square.c_square_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/host_applications/linux/apps/raspicam/gl_scenes/extr_square.c_square_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@angle = common dso_local global float 0.000000e+00, align 4
@anim_step = common dso_local global i64 0, align 8
@GL_COLOR_BUFFER_BIT = common dso_local global i32 0, align 4
@GL_DEPTH_BUFFER_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @square_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @square_init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @raspitexutil_gl_init_1_0(i32* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %17

9:                                                ; preds = %1
  store float 0.000000e+00, float* @angle, align 4
  store i64 0, i64* @anim_step, align 8
  %10 = call i32 @glClearColor(i32 0, i32 0, i32 0, i32 0)
  %11 = call i32 @glClearDepthf(i32 1)
  %12 = load i32, i32* @GL_COLOR_BUFFER_BIT, align 4
  %13 = load i32, i32* @GL_DEPTH_BUFFER_BIT, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @glClear(i32 %14)
  %16 = call i32 (...) @glLoadIdentity()
  br label %17

17:                                               ; preds = %9, %8
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @raspitexutil_gl_init_1_0(i32*) #1

declare dso_local i32 @glClearColor(i32, i32, i32, i32) #1

declare dso_local i32 @glClearDepthf(i32) #1

declare dso_local i32 @glClear(i32) #1

declare dso_local i32 @glLoadIdentity(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
